--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,42 @@ nav {
 
 img {
     height: 4rem;
+    display: flex;
 }
 
 .nav-links {
     line-height: 2rem;
 }
 
+ul {
+    margin-left: 2rem;
+    margin-bottom: 1rem;
+}
+
+li {
+    margin-bottom: 0.5rem;
+}
+
+ul ul {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+}
+
+.hobbies {
+    display:flex;
+    gap:2rem;
+    align-items: flex-start;
+}
+
+.hobbies img {
+    display: flex;
+}
+
+.hobbies > div {
+    display:flex;
+    flex-direction: column;
+    gap:1rem;
+}
 h1::after {
     content: '====================';
     display: block;
@@ -41,4 +71,28 @@ h1::after {
     font-size: 0.8;
     letter-spacing: 0em;
 }
+@-webkit-keyframes minecraftAvatar {
+    0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+    10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+    30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+    40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+    50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+    70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+    80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+    90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+    100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
 
+.shake {
+  -webkit-animation-name: minecraftAvatar;
+  -webkit-animation-duration: 0.8s;
+  -webkit-transform-origin: 50% 50%;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+
+h2 {
+    margin: 2rem 0 0 0;
+}
